# ShopifyProductTools

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT_plan.md  README.md  pyproject.toml  pytest.ini  requirements.txt
frontend/: package-lock.json
frontend/src/: App.vue  vite-env.d.ts
frontend/src/api/: index.ts
frontend/src/router/: index.ts
frontend/src/types/: index.ts
frontend/src/views/: Dashboard.vue  History.vue  Import.vue  Optimize.vue  Products.vue  Stores.vue
specs/: README.md  data-import.md  product-optimization.md  shopify-integration.md  web-interface.md
src/: __init__.py  app.py  config.py  database.py  main.py  schemas.py
src/api/: __init__.py  imports.py  optimize.py  products.py  stores.py
src/models/: __init__.py
src/services/: __init__.py  ai_optimizer.py  excel_import.py  shopify_client.py  web_scraper.py
src/utils/: crypto.py
tests/: conftest.py  test_api_products.py  test_api_stores.py  test_basic.py  test_crypto.py
